CSS -Psuedo classes

--- a/Phase 1/Session-8/GalleryProject.html
+++ b/Phase 1/Session-8/GalleryProject.html
@@ -22,6 +22,7 @@
 
             .image-card {
                 display: inline-block;
+                box-sizing: border-box;
                 width: 300px;
                 margin: 10px;
                 height: 300px;
