CSS -Psuedo classes

--- a/Phase 1/Session-9/Psuedo.html
+++ b/Phase 1/Session-9/Psuedo.html
@@ -25,7 +25,7 @@
                 background-color: aquamarine;
             }
             div p:first-child::first-letter{
-                background-color: chocolate;
+                background-color: white;
             }
     
         </style>
