--- a/Phase 1/Session-9/Psuedo.html
+++ b/Phase 1/Session-9/Psuedo.html
@@ -7,6 +7,7 @@
             
         <style>
             div{
+                background-color:lightblue;
                 margin: 20px;
                 padding: 20px;
             }
@@ -25,7 +26,7 @@
                 background-color: aquamarine;
             }
             div p:first-child::first-letter{
-                background-color: white;
+                background-color: chocolate;
             }
     
         </style>
@@ -44,7 +45,8 @@
             <p>Paragraph-8</p>
             <p>Paragraph-9</p>
             <p>Paragraph-10</p>
-
+        </div>
 
 
     </body>
+    </html>
