--- a/Phase 1/Session-9/01.Bootstrap.html
+++ b/Phase 1/Session-9/01.Bootstrap.html
@@ -9,7 +9,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     </head>
     <body>
+       <h1>Bootstrap Example</h1>
 
+       <div class="container" style="background-color: aqua;">
+        <h1>Container Class</h1>
+        <p>This is a container class</p>
+        </div>
+
+        <div class="container-fluid" style="background-color: brown;">
+            <h1>Container Fluid Class</h1>
+            <p>This is Container Fluid Class</p>
+        </div>
      <h1>Welcome to Bootstrap</h1>
     <!--SCRIPT-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
